- Create basic User, Group, Expense classes - Create sandbox for basic testing & expense creation

--- a/app.json
+++ b/app.json
@@ -32,6 +32,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": ["assets/fonts/Raleway-Regular.ttf", "assets/fonts/SpaceMono-Regular.ttf"]
+        }
       ]
     ],
     "experiments": {
